src/components/Main.module.scss
@import '../styles/colors';

.appContainer {
    width: 100%;
}

// Wrappers

.controlWrapper {
    align-items: flex-end;
    background: url('../../assets/images/background-cover.jpg') no-repeat $color-ui-nav-background;
    background-size: cover;
    display: flex;
    flex-direction: column;
    height: 100vh;
    justify-content: flex-start;
    position: fixed;
    top: 0;
    width: 30%;
}

.controlWrapperOverlay {
    background-color: transparentize($color-theme, 0.8);
    background-image: linear-gradient(140deg, $color-theme-gradient-end 20%, $color-theme-gradient-end);
    bottom: 0;
    height: 100%;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
    z-index: -1;
}

.contentWrapper {
    align-items: flex-start;
    display: flex;
    flex-direction: column;
    height: 100vh;
    justify-content: flex-start;
    margin-left: 30%;
    width: 61.8%;
}

// Control Containers

.navigationContainer {
    flex-grow: 1;
    flex-shrink: 0;
    width: 61.8%;
}

.siteFooterContainer {
    width: 61.8%;
}

// Content Containers

.mainContentContainer {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    flex-shrink: 0;
    width: 100%;
}

.footerContentContainer {
    display: flex;
    flex-direction: column;
    width: 100%;
}

